--- a/templates/faq.html
+++ b/templates/faq.html
@@ -81,7 +81,16 @@
         </details>
 
         <details class="bg-white p-4 rounded-xl shadow-sm group">
-            <summary class="cursor-pointer font-semibold text-lg group-open:text-indigo-600">
+        	<summary class="cursor-pointer font-semibold text-lg group-open:text-indigo-600">
+        		➕ Why should I add products?
+        	</summary>
+        	<div class="mt-2 text-gray-700">
+        		Adding products helps grow our shared library, making it easier for everyone to find relevant deals and build product groups. By contributing products you care about, you’re seeding a resource that benefits shoppers looking for the same items, enabling better deals, stronger communities, and more collective buying power.
+        	</div>
+        </details>
+
+        <details class="bg-white p-4 rounded-xl shadow-sm group">
+        	<summary class="cursor-pointer font-semibold text-lg group-open:text-indigo-600">
                 🧾 How do I add a deal?
             </summary>
             <div class="mt-2 text-gray-700">
