--- a/templates/scan.html
+++ b/templates/scan.html
@@ -53,7 +53,8 @@
   <!-- QuaggaJS (desktop) -->
   <script src="https://unpkg.com/@ericblade/quagga2/dist/quagga.min.js"></script>
   <!-- html5-qrcode (mobile) -->
-  <script src="https://unpkg.com/html5-qrcode/minified/html5-qrcode.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html5-qrcode/2.3.8/html5-qrcode.min.js"></script>
+
 
   <script>
     // Elements
