--- a/templates/home.html
+++ b/templates/home.html
@@ -39,7 +39,7 @@
   <div class="container mx-auto px-4 sm:px-6 lg:px-8 text-center">
     <h2 class="text-2xl sm:text-3xl font-semibold mb-6">Our Vision</h2>
     <p class="text-base sm:text-lg mb-6">We believe consumer choice can become collective power.<br> Shopidarity is building tools to help people coordinate around the products they buy.</p>
-    <a href="{{ url_for('static', filename='whitepaper.pdf') }}" target="_blank" class="vision-button bg-blue-500 text-white py-2 px-4 rounded-lg hover:bg-blue-700">📄 Download the White Paper (PDF)</a>
+    <a href="https://bryan907055.substack.com/p/shopidarity-white-paper?r=pf0tl" target="_blank" class="vision-button bg-blue-500 text-white py-2 px-4 rounded-lg hover:bg-blue-700">📄  White Paper on Substack</a>
   </div>
 </section>
 
